fixed resolution scaling. Added slight optimization. Made it so images don't smear/get blurry

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ div {
 }
 
 canvas {
-    width: 640px;
-    height: 400px;
+    width: 100vw;
+    height: 100vh;
     image-rendering: pixelated
 }
